# px4-system-identification

./: .gitignore  README.md  architecture.md  paper_chatgpt_prompt.md  prepare_identification_workspace.sh  skills.md  sync_into_px4_workspace.sh  system_identification.txt
docs/: chatgpt_research_prompt_hitl_sitl_validation.md  hitl_sitl_calibration_trajectory_selection.md  hitl_sitl_infrastructure_gap_analysis.md  hitl_sitl_residual_optimization_strategy.md  identification_methodology_and_sources.md  identification_research_gap_and_publication_plan.md
examples/: baseline_hitl_quickstart.md  cleanup_px4_background_services.sh  hitl_shell_smoke.py  import_sdcard_logs.sh  install_hitl_sdcard_payload_over_mavftp.py  last_trajectory_issue_2026-04-02_14-13-00.ulg  mavlink_serial_hub.py  operator_quickstart.md  prepare_sdcard_payload.sh  pull_sdcard_logs_over_mavftp.py  px4_nsh_runner.py  rc_only_workflow.params  real_flight_sorties.md  refresh_demo_assets.sh  restart_hitl_px4_clean_gui.sh  run_hitl_acceptance_repeats.py  run_hitl_all_five_usb250.sh  run_hitl_clean_gui_suite.sh  run_hitl_clean_gui_trajectory.sh  run_hitl_full_stack_sequential.py  run_hitl_full_stack_single_session.py  run_hitl_hairpin_clean_gui.sh  run_hitl_hairpin_repeat.py  run_hitl_hairpin_repeatability.py  run_hitl_hover_hold.py  run_hitl_ident_plus_lemniscate_calibration_session.py  run_hitl_ident_suite_clean_sessions.py  run_hitl_px4_baseline_hover.py  (+31 more)
overlay/src/modules/simulation/gz_plugins/system_identification_logger/: CMakeLists.txt  SystemIdentificationLogger.cpp  SystemIdentificationLogger.hpp
(+1368 files in other folders)
